--- a/values.yaml
+++ b/values.yaml
@@ -24,7 +24,8 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   path: /
-  hosts: []
+  hosts:
+    - chart-example.local
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
