--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -33,6 +33,6 @@ spec:
           - path: {{ $ingressPath }}
             backend:
               serviceName: {{ $fullName }}
-              servicePort: http
+              servicePort: api
   {{- end }}
 {{- end }}
