--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: A Helm chart to deploy PowerDNS to Kubernetes
-name: pdns
-version: 0.1.0
+name: powerdns-helm
+version: 0.2.0
