--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
 - name: mariadb
-  version: 7.x.x
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  version: "7.3.*"
+  repository: https://charts.bitnami.com/bitnami
   condition: mariadb.enabled
