--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
 - name: mariadb
-  version: 2.1.1
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  version: 7.4.2
+  repository: https://charts.bitnami.com/bitnami
   condition: mariadb.enabled
