--- a/templates/service-tcp.yaml
+++ b/templates/service-tcp.yaml
@@ -1,12 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "pdns.fullname" . }}
+  name: {{ template "pdns.fullname" . }}-tcp
   labels:
     app: {{ template "pdns.name" . }}
     chart: {{ template "pdns.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+{{- with .Values.service.annotations }}
+  annotations:
+{{ toYaml . | indent 4 }}
+{{- end }}
 spec:
   type: {{ .Values.service.type }}
   {{- if .Values.service.loadBalancerIP }}
@@ -17,10 +21,6 @@ spec:
       targetPort: 8081
       protocol: TCP
       name: api
-    - port: 53
-      targetPort: 53
-      protocol: UDP
-      name: dns-udp
     - port: 53
       targetPort: 53
       protocol: TCP
