fix ingress to look at correct service
Signed-off-by: Ryan Holt <ryan@ryanholt.net>

--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -32,7 +32,7 @@ spec:
         paths:
           - path: {{ $ingressPath }}
             backend:
-              serviceName: {{ $fullName }}
+              serviceName: {{ $fullName }}-tcp
               servicePort: api
   {{- end }}
 {{- end }}
