--- a/requirements.yaml
+++ b/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
 - name: mariadb
-  version: "7.3.*"
+  version: "7.3.21"
   repository: https://charts.bitnami.com/bitnami
   condition: mariadb.enabled
