--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -34,6 +34,7 @@ spec:
             backend:
               service:
                 name: {{ $fullName }}
-                port: api
+                port: 
+                  number: api
   {{- end }}
 {{- end }}
