added support for kub 1.4 v1beta1 and external mariadb

--- a/values.yaml
+++ b/values.yaml
@@ -61,6 +61,7 @@ mariadb:
     user: powerdns
     password: powerdns
     name: powerdns
+    host: host-url
   master:
     persistence:
       enabled: true
