--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -31,9 +31,10 @@ spec:
                 value: {{ template "mariadb.fullname" . }}
               {{- else if eq .Values.mariadb.serviceDiscovery "env" }}
                 value: {{ (include "mariadb.fullname" .) | replace "-" "_" | upper | printf "$(%s_SERVICE_HOST)" }}
+              {{- else if eq .Values.mariadb.serviceDiscovery "external" }}
+                value: {{ .Values.mariadb.db.host }}
               {{- end }}
               - name: MYSQL_USER
-                value: "root"
                 value: {{ .Values.mariadb.db.user | quote }}
               - name: MYSQL_PASS
                 value: {{ .Values.mariadb.db.password | quote }}
