--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "pdns.fullname" . -}}
 {{- $ingressPath := .Values.ingress.path -}}
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -30,12 +30,9 @@ spec:
     - host: {{ . }}
       http:
         paths:
-          - pathType: Prefix
-            path: {{ $ingressPath }}
+          - path: {{ $ingressPath }}
             backend:
-              service:
-                name: {{ $fullName }}
-                port:
-                  number: 8081
+              serviceName: {{ $fullName }}
+              servicePort: 8081
   {{- end }}
 {{- end }}
